--- a/src/main/resources/public/template/cmdb/ci/ciViewModal.html
+++ b/src/main/resources/public/template/cmdb/ci/ciViewModal.html
@@ -71,6 +71,21 @@
             <!-- 세부속성 -->
             <div class="flex-column view-row" id="ciAttributes" th:onclick="zCmdbAttribute.drawDetails(this, [[${ciData?.classes}]], [[${userInfo}]], 'view');">
             </div>
+            <!-- 연관 관계 -->
+            <div class="flex-column view-row z-relation-group">
+                <div class="under-bar mt-4 z-relation-title-group">
+                    <label id="relationLabel" class="z-sub-title">
+                        <span th:text="#{cmdb.ci.label.relation}"></span>
+                    </label>
+                </div>
+            </div>
+            <div class="flex-column view-row z-relation-group">
+                <div class="flex-row z-relation-select-box-group">
+                    <div class="flex-column align-left" style="width: 40%;" th:text="#{cmdb.ci.label.relationType}"></div>
+                    <div class="flex-column align-left" style="width: 60%;" th:text="#{cmdb.ci.label.targetCiName}"></div>
+                </div>
+            </div>
+            <div id="ciRelation"/>
         </div>
     </div>
 </body>
