--- a/src/main/resources/public/template/token/tokenView.html
+++ b/src/main/resources/public/template/token/tokenView.html
@@ -30,6 +30,7 @@
 <th:block layout:fragment="pageScript">
     <link th:href="@{/assets/theme/{theme}/css/itsm.css(theme=${#authentication.details.theme})}" rel="stylesheet"/>
     <link th:href="@{/assets/css/document.css}" rel="stylesheet"/>
+    <script th:src="@{/assets/js/cmdb/zCmdbAttribute.js}"></script>
     <script type="module">
         /*<![CDATA[*/
         import { ZSession } from '../../assets/js/lib/zSession.js';
