--- a/src/main/resources/public/scss/formDesigner/_form.scss
+++ b/src/main/resources/public/scss/formDesigner/_form.scss
@@ -314,6 +314,9 @@
           padding: 0.4375rem 0;
           margin: 0.25rem 0;
           text-indent: $element-indent;
+          &.picker-main {
+            padding-right: 2.25rem;
+          }
         }
       }
       // 데이터 없음
