--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -6031,25 +6031,25 @@ body.modal-active {
   padding: 0.4375rem 0;
   pointer-events: none;
 }
-.z-component .z-element .input, .z-component .z-element .z-input {
+.z-component .z-element .input, .z-component .z-element .z-input:not(.z-select-box-label) {
   width: 100%;
   border: 0.0625rem solid #ABB0B5;
   border-radius: 0.0625rem;
   -webkit-border-radius: 0.0625rem;
   -moz-border-radius: 0.0625rem;
 }
-.z-component .z-element .input:hover, .z-component .z-element .z-input:hover {
+.z-component .z-element .input:hover, .z-component .z-element .z-input:not(.z-select-box-label):hover {
   outline: 0;
   border: 0.0625rem solid #64BBF6;
 }
-.z-component .z-element .input:focus, .z-component .z-element .z-input:focus {
+.z-component .z-element .input:focus, .z-component .z-element .z-input:not(.z-select-box-label):focus {
   outline: 0;
   border: 0.0625rem solid #2578CE;
   -webkit-box-shadow: 0 0 0.125rem 0 #2578CE;
   -moz-box-shadow: 0 0 0.125rem 0 #2578CE;
   box-shadow: 0 0 0.125rem 0 #2578CE;
 }
-.z-component .z-element .input:active, .z-component .z-element .z-input:active {
+.z-component .z-element .input:active, .z-component .z-element .z-input:not(.z-select-box-label):active {
   outline: 0;
   border: 0.0625rem solid #2578CE;
 }
