#11593 [CMDB] CI 조회 ReadOnly 디자인

--- a/src/main/resources/public/scss/template/_elements.scss
+++ b/src/main/resources/public/scss/template/_elements.scss
@@ -619,9 +619,10 @@ select {
 
     .z-select-box-label {
       height: auto;
-      border: none;
       width: 100%;
+      background-color: transparent;
       padding: 0;
+      border: none;
       vertical-align: unset;
 
       &:hover,
