#11458 - js코드에서 css디자인 수정으로 변경

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1238,6 +1238,9 @@ input:focus, input:hover, textarea:focus, textarea:hover, select:focus, select:h
   pointer-events: none;
   cursor: default;
 }
+.z-input:read-only::placeholder, .z-input:disabled::placeholder {
+  color: transparent;
+}
 .z-input.error {
   border: 0.0625rem solid #F52525 !important;
 }
@@ -1386,6 +1389,9 @@ input:focus, input:hover, textarea:focus, textarea:hover, select:focus, select:h
   border: 0.0625rem solid #CFD5D9;
   pointer-events: none;
   cursor: default;
+}
+.z-textarea:read-only::placeholder, .z-textarea:disabled::placeholder {
+  color: transparent;
 }
 .z-textarea.error {
   border: 0.0625rem solid #F52525 !important;
@@ -5479,7 +5485,7 @@ select {
   min-height: 7.5rem;
   padding: 0.625rem;
 }
-.ql-wrapper-container .ql-container.ql-snow .ql-editor .ql-blank::before {
+.ql-wrapper-container .ql-container.ql-snow .ql-editor.ql-blank::before {
   content: attr(data-placeholder);
 }
 .ql-wrapper-container .ql-container.ql-snow .ql-editor h1, .ql-wrapper-container .ql-container.ql-snow .ql-editor h2, .ql-wrapper-container .ql-container.ql-snow .ql-editor h3, .ql-wrapper-container .ql-container.ql-snow .ql-editor h4, .ql-wrapper-container .ql-container.ql-snow .ql-editor h5, .ql-wrapper-container .ql-container.ql-snow .ql-editor h6 {
@@ -5490,6 +5496,9 @@ select {
 }
 .ql-wrapper-container .ql-container.ql-snow .ql-editor strong {
   font-weight: bold;
+}
+.ql-wrapper-container .ql-container.ql-disabled .ql-blank::before, .ql-wrapper-container .ql-containerql-readonly .ql-blank::before {
+  color: transparent;
 }
 .ql-wrapper-container .ql-container.error {
   border: 0.0625rem solid #F52525 !important;
