--- a/src/main/resources/public/scss/template/_elements.scss
+++ b/src/main/resources/public/scss/template/_elements.scss
@@ -288,6 +288,11 @@ input, textarea, select {
     cursor: default;
   }
 
+  //readonly와 disabled일 때 placeholder감추기
+  &:read-only::placeholder,
+  &:disabled::placeholder {
+    color: transparent;
+  }
   &.error {
     @include border($validation-error-border-width, solid, $validation-error-border-color !important, all);
   }
@@ -441,6 +446,12 @@ input, textarea, select {
     cursor: default;
   }
 
+//readonly와 disabled일 때 placeholder감추기
+  &:read-only::placeholder,
+  &:disabled::placeholder {
+    color: transparent;
+  }
+  
   &.error {
     @include border($validation-error-border-width, solid, $validation-error-border-color !important, all);
   }
