introduction console 추가

--- a/src/main/resources/public/template/layout/itsm/itsmHead.html
+++ b/src/main/resources/public/template/layout/itsm/itsmHead.html
@@ -30,6 +30,11 @@
 <script th:src="@{/assets/vendors/tagify/tagify.custom.js}"></script>
 <script type="text/javascript">
     /*<![CDATA[ */
+    // 이쁘게 꾸민 사이트가 많길래... 한번 해보았다.
+    // 2021-11-16 Jung Hee Chan
+    const introductionMsg = "%c😎 Zenius ITSM V3.0";
+    const introductionCss = "font-size: 3rem; color: #0066ff; margin: 0.5rem 0;";
+    console.log(introductionMsg, introductionCss);
 
     //Drag and Drop Prevent Event Listener
     window.addEventListener('dragover', (e) => {
