사용자가 지정한 타임존에 맞게 userdatetime 적용

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -6871,6 +6871,9 @@ body.modal-active {
 .alice-toastify.toast-content .content div.message {
   padding-bottom: 0.625rem;
 }
+.alice-toastify.toast-content .content div.date {
+  color: #8B9094;
+}
 .alice-toastify.toast-content .content div span.z-title {
   max-width: 18.13rem;
   font-size: 1rem;
