--- a/src/main/resources/public/scss/template/_elements.scss
+++ b/src/main/resources/public/scss/template/_elements.scss
@@ -636,6 +636,7 @@ select {
       padding: 0;
       border: none;
       vertical-align: unset;
+      pointer-events: none;
 
       &:hover,
       &:focus {
