--- a/src/main/resources/public/scss/theme/default/_modal.scss
+++ b/src/main/resources/public/scss/theme/default/_modal.scss
@@ -143,8 +143,10 @@
   }
   // 관련문서 모달
   // CMDB > Class > AttributeList 모달
+  // 사용자 정보 수정 > 업무 대리인 모달
   &.cmdb-class-attribute-modal,
-  &.token-list {
+  &.token-list,
+  &.sub-user-modal {
     width: $token-list-modal-width;
     height: $token-list-modal-height;
 
@@ -154,8 +156,10 @@
 
       // 관련문서 목록
       // CMDB > Class > AttributeList 목록
+      // 사용자 정보 수정 > 업무 대리인 목록
       .cmdb-class-attribute-list,
-      .related-instance-list {
+      .related-instance-list,
+      .sub-user-list {
         margin-top: 0.9375rem; // 15px
         .table-set {
           margin-top: 1.875rem; // 30px
