--- a/src/main/resources/public/template/scheduler/scheduler.html
+++ b/src/main/resources/public/template/scheduler/scheduler.html
@@ -390,7 +390,7 @@
     /** 크론 표현식 검사 **/
     function cronSplit() {
         let elem = document.getElementById('cronExpression');
-        let regex = new RegExp(/^(\*|([1-5]?[0-9])) (\*|([1-5]?[0-9])) (\*|(1[0-9]|2[0-3])) (\?|\*|([12]?[0-9]|3[0-1])) (\*|([1-9]|1[0-2])|(jan)|(feb)|(mar)|(apr)|(may)|(jun)|(jul)|(aug)|(sep)|(oct)|(nov)|(dec)) (\?|\*|([0-6])|(sun)|(mon)|(tue)|(wed)|(thu)|(fri)|(sat))$/i);
+        let regex = new RegExp(/^(\*|([1-5]?[0-9])) (\*|([1-5]?[0-9])|([1-5]?[0-9]\/[1-5]?[0-9])) (\*|(1?[0-9]|2[0-3])) (\?|\*|([12]?[0-9]|3[0-1])) (\*|([1-9]|1[0-2])|(jan)|(feb)|(mar)|(apr)|(may)|(jun)|(jul)|(aug)|(sep)|(oct)|(nov)|(dec)) (\?|\*|([0-6])|(sun)|(mon)|(tue)|(wed)|(thu)|(fri)|(sat))$/i);
         //공백 제거 및 배열로 저장
         let cronValue = elem.value.replace(/ +/g, " ").trim().split(' ');
 
