disabled 생성 및 css 작업

--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -1886,6 +1886,15 @@ input:focus, input:hover, textarea:focus, textarea:hover, select:focus, select:h
   border: 0.0625rem solid #76BD26 !important;
 }
 
+.z-textarea-readonly {
+  border: none !important;
+  border-left: 0.0625rem solid #ABB0B5 !important;
+}
+.z-textarea-disabled:hover, .z-textarea-disabled:focus {
+  border: 0.0625rem solid #ABB0B5 !important;
+  box-shadow: none !important;
+}
+
 .z-switch {
   position: relative;
   height: 1.125rem;
