#11694 권한 위임 기능 구현 MR feedback

--- a/src/main/resources/public/template/user/user.html
+++ b/src/main/resources/public/template/user/user.html
@@ -172,7 +172,7 @@
         <div class="flex-column z-edit-row" th:if="${users?.userKey}">
             <h3 class="sub-title under-bar bold" th:text="#{user.label.userAbsence}"></h3>
             <label class="z-switch" for="userAbsence">
-                <input type="checkbox" id="userAbsence" name="userAbsence" onchange="setDisplay('absenceData',this, true)"
+                <input type="checkbox" id="userAbsence" name="userAbsence" onchange="setAbsenceDisplay('absenceData',this, true)"
                        th:checked="${users?.absenceYn == true}" th:disabled="${view}" />
                 <span></span>
                 <span class="z-label" th:text="#{user.msg.userAbsence}"></span>
@@ -255,7 +255,7 @@
         OverlayScrollbars(document.querySelector('.z-page-content'), {className: 'scrollbar'});
         OverlayScrollbars(document.querySelector('.z-checkbox-list'), {className: 'inner-scrollbar'});
         if ([[${users?.userKey}]] !== null) {
-            setDisplay('absenceData',document.getElementById('userAbsence'), false);
+            setAbsenceDisplay('absenceData',document.getElementById('userAbsence'), false);
         }
     };
 
@@ -340,7 +340,12 @@
         });
     }
 
-    function setDisplay(viewId, isWIPtoSubstitute) {
+    /**
+     * 부재설정 radio 버튼 on/off 시 관련 폼을 그리거나 제거합니다.
+     * viewId : 대상 radio button id
+     * isWIPtoSubstitute: 부재 설정 시 진행 중 문서(Work In Process) 위임 여부
+     */
+    function setAbsenceDisplay(viewId, isWIPtoSubstitute) {
         let switchElement = document.getElementById('userAbsence')
         if (switchElement.checked) {
             const startDtVal = ''; // /*[[${users?.absenceStartDt}]]*/
