#11694 권한 위임 기능 구현 MR feedback

--- a/src/main/resources/public/template/user/user.html
+++ b/src/main/resources/public/template/user/user.html
@@ -265,7 +265,7 @@
     const STATUS_SUCCESS_EDIT_EMAIL = '4';
     const STATUS_SUCCESS_EDIT_ADMIN = '5';
     const STATUS_SUCCESS_EDIT_PASSWORD = '6';
-    let WIPtoSubstituteUser = false;
+    let wipToSubstituteUser = false;
 
     function restSubmit(method, url, activeValidation) {
         if (activeValidation === 'true') {
@@ -295,7 +295,7 @@
             absenceStartDt: ([[${users?.userKey}]] !== null) ? document.getElementById('absenceStartDt').value : '',
             absenceEndDt: ([[${users?.userKey}]] !== null) ? document.getElementById('absenceEndDt').value : '',
             substituteUserKey: ([[${users?.userKey}]] !== null) ? document.getElementById('substituteUserKey').value : '',
-            assigneeChange: WIPtoSubstituteUser,
+            assigneeChange: wipToSubstituteUser,
             timeFormat: document.getElementById('date').value + ' ' + document.getElementById('time').value,
             roles: arrRoleValue,
             avatarUUID: document.getElementById('avatarUUID').value
@@ -358,15 +358,15 @@
             zDateTimePicker.initDateTimePicker(endDtElement);
             document.getElementById(viewId).style.display = 'block';
             if (isWIPtoSubstitute) {
-                zAlert.confirm(i18n.msg('user.msg.confirmWIPToSubstituteUser'), () => {
-                    WIPtoSubstituteUser = true;
+                zAlert.confirm(i18n.msg('user.msg.confirmwipToSubstituteUser'), () => {
+                    wipToSubstituteUser = true;
                 });
             }
         } else {
             document.getElementById('absenceStartDt').value = '';
             document.getElementById('absenceEndDt').value = '';
             document.getElementById(viewId).style.display = 'none';
-            WIPtoSubstituteUser = false;
+            wipToSubstituteUser = false;
         }
     }
 
